<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.pixonsoft.demolayout.CadastroActivity">

    <TextView android:text="@string/label_nome"
        android:id="@+id/tvNome"
        style="@style/textView"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etNome" />

    <TextView android:text="@string/label_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvEmail"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etEmail" />

    <TextView android:text="@string/label_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvSenha"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etSenha" />

    <TextView android:text="@string/label_confirmar_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvConfirmarSenha"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etConfirmarSenha" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="2">

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView android:text="@string/label_idade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvIdade" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etIdade"
                android:inputType="number"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView android:text="@string/label_sexo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvSexo"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spSexo"
                android:entries="@array/sexos"/>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_cadastrar"/>

</LinearLayout>
